[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m45wxcontrols"
version = "0.1.0"
description = "Custom control wrappers for wxPython by M45Development."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Steffen Schultz", email = "steffenschultz@mailbox.org" },
]
maintainers = [
  { name = "Steffen Schultz", email = "steffenschultz@mailbox.org" },
]
keywords = [
  "wxpython", "wxwidgets", "spinctrldouble", "listctrl", "dataview", "accessibility", "a11y", "screen-reader",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: User Interfaces",
  "Intended Audience :: Developers",
]
dependencies = [
  "wxPython>=4.2.0",
]

[project.urls]
Homepage = "https://m45.dev"
Source = "https://github.com/schulle4u/m45wxcontrols"
Issues = "https://github.com/schulle4u/m45wxcontrols/issues"
Documentation = "https://schulle4u.github.io/m45wxcontrols/"

[tool.hatch.build.targets.wheel]
packages = ["src/m45wxcontrols"]

[tool.ruff]
line-length = 100
target-version = "py310"
